--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "antd": "^4.16.9",
+    "i18next": "^20.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.11.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
